<resources>
    <string name="app_name">K-Table</string>

    <string name="default_web_client_id">

    </string>

    <!-- Sign Up 3/4 화면용 텍스트 리소스 -->
    <string name="signup_step_3">Sign Up 3/4</string>
    <string name="tell_us_about_you">Tell Us About You!</string>
    <string name="personalize_subtitle">We\'ll personalize your experience based on your preferences.</string>

    <!-- 식단 및 취향 선택지 -->
    <string name="pref_halal">Halal</string>
    <string name="pref_vegetarian">Vegetarian</string>
    <string name="pref_vegan">Vegan</string>
    <string name="pref_msg_free">MSG Free</string>
    <string name="pref_gluten_free">Gluten Free</string>
    <string name="pref_pork_free">Pork Free</string>
    <string name="pref_alcohol_free">Alcohol Free</string>
    <string name="pref_none">None</string>

    <!-- 안내 및 버튼 -->
    <string name="update_anytime">You can update this anytime in Settings.</string>
    <string name="btn_next">Next</string>

    <!-- 4단계 알레르기 선택 화면용 텍스트 -->
    <string name="signup_step_4">Sign Up 4/4</string>
    <string name="allergy_subtitle">Select any foods you are allergic to.</string>

    <!-- 기본 알레르기 목록 -->
    <string name="allergy_peanuts">Peanuts</string>
    <string name="allergy_tree_nuts">Tree Nuts</string>
    <string name="allergy_milk">Milk</string>
    <string name="allergy_eggs">Eggs</string>
    <string name="allergy_seafood">Seafood</string>
    <string name="allergy_wheat">Wheat</string>
    <string name="allergy_soy">Soy</string>
    <string name="allergy_sesame">Sesame</string>
    <string name="allergy_other">Other</string>

    <!-- 확장 시 추가 알레르기 목록 -->
    <string name="allergy_corn">Corn</string>
    <string name="allergy_chicken">Chicken</string>
    <string name="allergy_beef">Beef</string>
    <string name="allergy_pork">Pork</string>
    <string name="allergy_tomato">Tomato</string>
    <string name="allergy_mushroom">Mushroom</string>
    <string name="allergy_coconut">Coconut</string>
    <string name="allergy_kiwi">Kiwi</string>
    <string name="allergy_peach">Peach</string>
    <string name="allergy_banana">Banana</string>
    <string name="allergy_garlic">Garlic</string>
    <string name="allergy_onion">Onion</string>
    <string name="allergy_spices">Spices</string>

    <!-- 공통 버튼 및 하단 텍스트 -->
    <string name="allergy_none">None</string>
    <string name="btn_complete">Complete</string>
    <string name="update_settings_msg">You can update this anytime in Settings.</string>

    <string name="welcome_message">Welcome!!</string>
    <string name="welcome_subtitle">we\'ll recommend personalized food\nand restaurants just for you.</string>
    <string name="btn_get_started">Get Started</string>
</resources>